force-app/main/default/objects/Payment_Receipt__c/fields/Bank_Charges__c.field-meta.xml
<CustomField>
    <fullName>Bank_Charges__c</fullName>
    <label>Bank Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>