force-app/main/default/objects/Payment_Receipt__c/fields/Bill_To__c.field-meta.xml
<CustomField>
    <fullName>Bill_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bill To</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Payment Receipts (Billing Party)</relationshipLabel>
    <relationshipName>Payment_Receipts1</relationshipName>
    <type>Lookup</type>
</CustomField>