force-app/main/default/objects/Payment_Receipt__c/fields/Bill_To_Type__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Type__c</fullName>
    <formula>Bill_To__r.RecordType.DeveloperName</formula>
    <label>Bill To Type</label>
    <type>Text</type>
</CustomField>