force-app/main/default/objects/Payment_Receipt__c/fields/Bypass_Status_Validation__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Status_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass Status Validation</label>
    <type>Checkbox</type>
</CustomField>