force-app/main/default/objects/Payment_Receipt__c/fields/CC_Commission__c.field-meta.xml
<CustomField>
    <fullName>CC_Commission__c</fullName>
    <label>BT/CC Commission %</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>