force-app/main/default/objects/Payment_Receipt__c/fields/CC_Commission_Amount__c.field-meta.xml
<CustomField>
    <fullName>CC_Commission_Amount__c</fullName>
    <formula>Receipt_Amount__c * VALUE(TEXT( CC_Commission__c))/100</formula>
    <label>BT/CC Commission Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>