force-app/main/default/objects/Payment_Receipt__c/fields/Cheque_Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>Cheque_Bank_Name__c</fullName>
    <label>Cheque Bank Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Indian Overseas Bank (IOB)</fullName>
            </value>
            <value>
                <fullName>OCBC Bank (OCBC)</fullName>
            </value>
            <value>
                <fullName>Indian Bank (IB)</fullName>
            </value>
            <value>
                <fullName>HSBC Bank (HSBC)</fullName>
            </value>
            <value>
                <fullName>Citibank, N.A (CITBK)</fullName>
            </value>
            <value>
                <fullName>Maybank Banking Berhad (MAYBK)</fullName>
            </value>
            <value>
                <fullName>United Overseas Bank (UOB)</fullName>
            </value>
            <value>
                <fullName>Dbs Bank (DBS)</fullName>
            </value>
            <value>
                <fullName>Post Office Saving Bank (POSB)</fullName>
            </value>
            <value>
                <fullName>Arab Banking Corporation (ABC)</fullName>
            </value>
            <value>
                <fullName>The Asahi Bank Ltd (ABL)</fullName>
            </value>
            <value>
                <fullName>ABN Amro Bank (ABN)</fullName>
            </value>
            <value>
                <fullName>American Express Bank (AEB)</fullName>
            </value>
            <value>
                <fullName>Asahi Bank (ASB)</fullName>
            </value>
            <value>
                <fullName>Bank Brussels Lambert (BB)</fullName>
            </value>
            <value>
                <fullName>Bangkok Bank Ltd (BBL)</fullName>
            </value>
            <value>
                <fullName>Bank Bumiputra Malaysia Bhd (BBMB)</fullName>
            </value>
            <value>
                <fullName>Barclays Bank Ltd (BBP)</fullName>
            </value>
            <value>
                <fullName>Banca Commerciale Italiana (BCI)</fullName>
            </value>
            <value>
                <fullName>Banco Do Brasil Sa (BDB)</fullName>
            </value>
            <value>
                <fullName>Ban Hin Lee Bank Berhad (BHLBB)</fullName>
            </value>
            <value>
                <fullName>Bayerische Hypotheken-Und Wechsel-Bank (BHYPO)</fullName>
            </value>
            <value>
                <fullName>Bank Indosuez (BI)</fullName>
            </value>
            <value>
                <fullName>Pt Bank Negara Indonesia (BNI)</fullName>
            </value>
            <value>
                <fullName>Banque Nationale De Paris (BNP)</fullName>
            </value>
            <value>
                <fullName>Bank Of America (BOA)</fullName>
            </value>
            <value>
                <fullName>Bank Of China (BOC)</fullName>
            </value>
            <value>
                <fullName>Bank Of East Asia (BOEA)</fullName>
            </value>
            <value>
                <fullName>Bank Of Hawaii (BOH)</fullName>
            </value>
            <value>
                <fullName>Bank Of India (BOI)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>