force-app/main/default/objects/Payment_Receipt__c/fields/Cheque_Bank_Name_Others__c.field-meta.xml
<CustomField>
    <fullName>Cheque_Bank_Name_Others__c</fullName>
    <label>Cheque Bank Name Others</label>
    <length>255</length>
    <type>Text</type>
</CustomField>