force-app/main/default/objects/Payment_Receipt__c/fields/Credit_Card_Type__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_Type__c</fullName>
    <label>BrainTree or Credit Card Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Payment_Mode__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DBS -  NEW VISA</fullName>
            </value>
            <value>
                <fullName>AMEX BELOW 3K</fullName>
            </value>
            <value>
                <fullName>AMEX 1K TO 19999</fullName>
            </value>
            <value>
                <fullName>AMEX 20K TO 99999</fullName>
            </value>
            <value>
                <fullName>AMEX 100K AND ABOVE</fullName>
            </value>
            <value>
                <fullName>BrainTree</fullName>
            </value>
            <value>
                <fullName>AMEX</fullName>
                <isActive>false</isActive>
                <label>AMEX</label>
            </value>
            <value>
                <fullName>AMEX ABOVE 3K</fullName>
                <isActive>false</isActive>
                <label>AMEX ABOVE 3K</label>
            </value>
            <value>
                <fullName>AMEX BELOW 1K</fullName>
                <isActive>false</isActive>
                <label>AMEX BELOW 1K</label>
            </value>
            <value>
                <fullName>CITIBANK 12MTHS</fullName>
                <isActive>false</isActive>
                <label>CITIBANK 12MTHS</label>
            </value>
            <value>
                <fullName>CITIBANK 24MTHS</fullName>
                <isActive>false</isActive>
                <label>CITIBANK 24MTHS</label>
            </value>
            <value>
                <fullName>CITIBANK 36MTHS</fullName>
                <isActive>false</isActive>
                <label>CITIBANK 36MTHS</label>
            </value>
            <value>
                <fullName>CITIBANK 3MTHS</fullName>
                <isActive>false</isActive>
                <label>CITIBANK 3MTHS</label>
            </value>
            <value>
                <fullName>CITIBANK 6MTHS</fullName>
                <isActive>false</isActive>
                <label>CITIBANK 6MTHS</label>
            </value>
            <value>
                <fullName>CITIBANK READYCREDIT</fullName>
                <isActive>false</isActive>
                <label>CITIBANK READYCREDIT</label>
            </value>
            <value>
                <fullName>CITIBANK VISA</fullName>
                <isActive>false</isActive>
                <label>CITIBANK VISA</label>
            </value>
            <value>
                <fullName>DBS -  NEW MAIL ORDER</fullName>
                <isActive>false</isActive>
                <label>DBS -  NEW MAIL ORDER</label>
            </value>
            <value>
                <fullName>DBS 12MTHS</fullName>
                <isActive>false</isActive>
                <label>DBS 12MTHS</label>
            </value>
            <value>
                <fullName>DBS 24 MTHS(CCK)</fullName>
                <isActive>false</isActive>
                <label>DBS 24 MTHS(CCK)</label>
            </value>
            <value>
                <fullName>DBS 24MTHS</fullName>
                <isActive>false</isActive>
                <label>DBS 24MTHS</label>
            </value>
            <value>
                <fullName>DBS 6MTHS</fullName>
                <isActive>false</isActive>
                <label>DBS 6MTHS</label>
            </value>
            <value>
                <fullName>DBS VISA</fullName>
                <isActive>false</isActive>
                <label>DBS VISA</label>
            </value>
            <value>
                <fullName>DBSH VISA</fullName>
                <isActive>false</isActive>
                <label>DBSH VISA</label>
            </value>
            <value>
                <fullName>DINER</fullName>
                <isActive>false</isActive>
                <label>DINER</label>
            </value>
            <value>
                <fullName>MAYBANK 12MTHS</fullName>
                <isActive>false</isActive>
                <label>MAYBANK 12MTHS</label>
            </value>
            <value>
                <fullName>MAYBANK 6MTHS</fullName>
                <isActive>false</isActive>
                <label>MAYBANK 6MTHS</label>
            </value>
            <value>
                <fullName>SCB VISA</fullName>
                <isActive>false</isActive>
                <label>SCB VISA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>