force-app/main/default/objects/Payment_Receipt__c/fields/Deposit_Bank__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Bank__c</fullName>
    <label>Deposit Bank</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Franchise_Code__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DBS Bank (DBSA)</fullName>
            </value>
            <value>
                <fullName>DBS Bank (DBSF)</fullName>
            </value>
            <value>
                <fullName>DBS BANK (DBSI)</fullName>
            </value>
            <value>
                <fullName>DBS Bank (DBSK)</fullName>
            </value>
            <value>
                <fullName>STANDARD CHARTERED BANK (SCBA)</fullName>
            </value>
            <value>
                <fullName>STANDARD CHARTERED BANK (SCBF)</fullName>
            </value>
            <value>
                <fullName>STANDARD CHARTERED BANK (SCBK)</fullName>
            </value>
            <value>
                <fullName>STANDARD CHARTERED BANK (SCBP)</fullName>
            </value>
            <value>
                <fullName>UOB - NETS (UOBI)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>