force-app/main/default/objects/Payment_Receipt__c/fields/Payment_Mode__c.field-meta.xml
<CustomField>
    <fullName>Payment_Mode__c</fullName>
    <label>Payment Mode</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Payment_Mode</valueSetName>
    </valueSet>
</CustomField>