force-app/main/default/objects/Payment_Receipt__c/fields/Receipt_Amount_excl_GST__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Amount_excl_GST__c</fullName>
    <formula>Receipt_Amount__c -  Receipt_GST_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Receipt Amount excl. GST</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>