force-app/main/default/objects/Payment_Receipt__c/fields/Receipt_Date__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Date__c</fullName>
    <defaultValue>Today ()</defaultValue>
    <label>Receipt Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>