force-app/main/default/objects/Payment_Receipt__c/fields/Receipt_GST_Amount__c.field-meta.xml
<CustomField>
    <fullName>Receipt_GST_Amount__c</fullName>
    <formula>Receipt_Amount__c * VALUE(TEXT( GST_Percentage__c))/100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Receipt GST Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>