force-app/main/default/objects/Payment_Receipt__c/fields/Ref_No__c.field-meta.xml
<CustomField>
    <fullName>Ref_No__c</fullName>
    <inlineHelpText>Input Last 4 digits of Credit Card, Approval Code or BrainTree Transaction ID</inlineHelpText>
    <label>Ref. No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>