force-app/main/default/objects/Payment_Receipt__c/fields/Registered_Party__c.field-meta.xml
<CustomField>
    <fullName>Registered_Party__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Registered Party</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Payment Receipts</relationshipLabel>
    <relationshipName>Payment_Receipts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>