force-app/main/default/objects/Payment_Receipt__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Posted</fullName>
            </value>
            <value>
                <fullName>Voided</fullName>
            </value>
            <value>
                <fullName>Draft</fullName>
                <isActive>false</isActive>
                <label>Draft</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>