force-app/main/default/objects/Payment_Receipt__c/fields/Total_Receipt_Amount_excl_GST__c.field-meta.xml
<CustomField>
    <fullName>Total_Receipt_Amount_excl_GST__c</fullName>
    <label>Total Receipt Amount excl. GST</label>
    <summarizedField>Payment_Receipt_Line_Item__c.Receipt_Amount_excl_GST__c</summarizedField>
    <summaryForeignKey>Payment_Receipt_Line_Item__c.Payment_Receipt__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>