force-app/main/default/objects/Payment_Receipt__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Balance Payment</fullName>
            </value>
            <value>
                <fullName>Vehicle Deposit</fullName>
            </value>
            <value>
                <fullName>COE Deposit</fullName>
            </value>
            <value>
                <fullName>Refundable Deposit</fullName>
                <isActive>false</isActive>
                <label>Refundable Deposit</label>
            </value>
            <value>
                <fullName>Used Car Payment</fullName>
                <isActive>false</isActive>
                <label>Used Car Payment</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>