force-app/main/default/objects/Payment_Receipt__c/fields/Void_Doc_No__c.field-meta.xml
<CustomField>
    <fullName>Void_Doc_No__c</fullName>
    <label>Void Document No.</label>
    <length>50</length>
    <type>Text</type>
</CustomField>