force-app/main/default/objects/Payment_Receipt__c/fields/Void_Reason__c.field-meta.xml
<CustomField>
    <fullName>Void_Reason__c</fullName>
    <label>Void Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cancellation</fullName>
                <label>Being Cancellation of Order</label>
            </value>
            <value>
                <fullName>Redefine Booking Deposits</fullName>
            </value>
            <value>
                <fullName>Receipt Not Link To Agreement</fullName>
            </value>
            <value>
                <fullName>Bounced Cheque</fullName>
            </value>
            <value>
                <fullName>Issued Duplicated Receipts</fullName>
            </value>
            <value>
                <fullName>Transfer Of Customer Booking</fullName>
            </value>
            <value>
                <fullName>Wrong Payment Type</fullName>
            </value>
            <value>
                <fullName>Keying In Errors</fullName>
            </value>
            <value>
                <fullName>Void COE Deposit</fullName>
            </value>
            <value>
                <fullName>Void Vehicle Deposit</fullName>
            </value>
            <value>
                <fullName>Void Balance Payment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>