force-app/main/default/objects/Payment_Receipt__c/validationRules/PR_is_posted_then_cannot_be_edited.validationRule-meta.xml
<ValidationRule>
    <fullName>PR_is_posted_then_cannot_be_edited</fullName>
    <active>true</active>
    <errorConditionFormula>AND
(
    !(PRIORVALUE(Bypass_Status_Validation__c) = true),
    ISPICKVAL(PRIORVALUE(Status__c), &apos;Posted&apos;),
				NOT(ISCHANGED(Status__c)),
			 NOT(ISCHANGED(Void_Date__c)),
				NOT(ISCHANGED(Void_Doc_No__c)),  
				NOT(ISCHANGED(Void_Reason__c))
)</errorConditionFormula>
    <errorMessage>After PR status is Posted, PR cannot be edited or reverted to previous status.</errorMessage>
</ValidationRule>