force-app/main/default/objects/Payment_Receipt__c/validationRules/Receipt_date_cannot_be_lesser_than_today.validationRule-meta.xml
<ValidationRule>
    <fullName>Receipt_date_cannot_be_lesser_than_today</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISCHANGED(Receipt_Date__c), Receipt_Date__c &lt; Today(), ISPICKVAL(Status__c, &quot;Posted&quot;)) &amp;&amp;  NOT($Permission.Special_Permission )</errorConditionFormula>
    <errorMessage>Receipt Date cannot be back dated.</errorMessage>
</ValidationRule>