force-app/main/default/objects/Payment_Receipt__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Receipt_Amount__c</columns>
    <columns>Franchise_Code__c</columns>
    <columns>Sales_Agreement__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>